After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751316 - rtpjitterbuffer : Fix a typing error of comment and the code which is wrong coding style. (trivial cleanup)
rtpjitterbuffer : Fix a typing error of comment and the code which is wrong c...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-22 10:57 UTC by Sangkyu Park (sangkyup)
Modified: 2015-06-22 12:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
I attached the patch for trivial cleanup. (1.69 KB, patch)
2015-06-22 10:59 UTC, Sangkyu Park (sangkyup)
committed Details | Review

Description Sangkyu Park (sangkyup) 2015-06-22 10:57:18 UTC
I found the code when studying rtpjitterbuffer code.
It is trivial cleanup.
Comment 1 Sangkyu Park (sangkyup) 2015-06-22 10:59:59 UTC
Created attachment 305816 [details] [review]
I attached the patch for trivial cleanup.
Comment 2 Sebastian Dröge (slomo) 2015-06-22 11:09:00 UTC
Please try to not change the file permissions in your patches, there's no point in making the .c files executable :)

Also please include the Bugzilla URL in the commit message

commit 2663388000ddd56859914fc9930b7b0ed971354f
Author: Sangkyu Park <sk1122.park@samsung.com>
Date:   Mon Jun 22 19:45:14 2015 +0900

    rtpjitterbuffer: Minor clean-up
    
    1. Fix the code which is wrong coding style.
    2. Fix a typing error of comment.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751316
Comment 3 Sangkyu Park (sangkyup) 2015-06-22 12:03:06 UTC
(In reply to Sebastian Dröge (slomo) from comment #2)
> Please try to not change the file permissions in your patches, there's no
> point in making the .c files executable :)
> 
> Also please include the Bugzilla URL in the commit message
> 
> commit 2663388000ddd56859914fc9930b7b0ed971354f
> Author: Sangkyu Park <sk1122.park@samsung.com>
> Date:   Mon Jun 22 19:45:14 2015 +0900
> 
>     rtpjitterbuffer: Minor clean-up
>     
>     1. Fix the code which is wrong coding style.
>     2. Fix a typing error of comment.
>     
>     https://bugzilla.gnome.org/show_bug.cgi?id=751316

OK. I will try according to your guide. Thank you :)